workspace/log/build_2024-12-08_12-56-33/template_drone_control/stderr.log
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp: In member function ‘void MultiDroneControl::move_drones(MultiDroneControl::Coords)’:
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:286:35: error: no matching function for call to ‘spin_some(MultiDroneControl*)’
  286 |             rclcpp::spin_some(this);
      |                                   ^
In file included from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:1:
/opt/ros/foxy/include/rclcpp/executors.hpp:35:1: note: candidate: ‘void rclcpp::spin_some(rclcpp::node_interfaces::NodeBaseInterface::SharedPtr)’
   35 | spin_some(rclcpp::node_interfaces::NodeBaseInterface::SharedPtr node_ptr);
      | ^~~~~~~~~
/opt/ros/foxy/include/rclcpp/executors.hpp:35:65: note:   no known conversion for argument 1 from ‘MultiDroneControl*’ to ‘rclcpp::node_interfaces::NodeBaseInterface::SharedPtr’ {aka ‘std::shared_ptr<rclcpp::node_interfaces::NodeBaseInterface>’}
   35 | spin_some(rclcpp::node_interfaces::NodeBaseInterface::SharedPtr node_ptr);
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
/opt/ros/foxy/include/rclcpp/executors.hpp:39:1: note: candidate: ‘void rclcpp::spin_some(rclcpp::Node::SharedPtr)’
   39 | spin_some(rclcpp::Node::SharedPtr node_ptr);
      | ^~~~~~~~~
/opt/ros/foxy/include/rclcpp/executors.hpp:39:35: note:   no known conversion for argument 1 from ‘MultiDroneControl*’ to ‘rclcpp::Node::SharedPtr’ {aka ‘std::shared_ptr<rclcpp::Node>’}
   39 | spin_some(rclcpp::Node::SharedPtr node_ptr);
      |           ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:257:21: warning: unused variable ‘drone2’ [-Wunused-variable]
  257 |         const auto &drone2 = drone_namespaces_[1];
      |                     ^~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:258:21: warning: unused variable ‘drone3’ [-Wunused-variable]
  258 |         const auto &drone3 = drone_namespaces_[2];
      |                     ^~~~~~
make[2]: *** [CMakeFiles/swaarm_control.dir/build.make:63: CMakeFiles/swaarm_control.dir/src/swaarm_control.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/swaarm_control.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
